[package]
name = "angeltech"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16", features = [
    "bevy_render",
    "bevy_asset",
    "bevy_pbr",
    "dynamic_linking"
] }
bevy_voxel_world = "0.12.0"
noise = { version = "0.9.0"}
avian3d = "0.3.0"

[profile.dev.package."*"]
opt-level = 3


